# moonranger-MSP-dependencies

./: .gitmodules  README.md
driverlib/: CMakeLists.txt
driverlib/MSP430FR5xx_6xx/: checksum.c  checksum.h
driverlib/MSP430FR5xx_6xx/inc/: hw_memmap.h
